--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1675738853578" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1675738853578" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1675738853578" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1675738853578" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1675903463370" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1675903463370" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1675903463370" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1675903463370" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -122,7 +122,7 @@
     <section class="sp">
         <div class="container">
             <div class="layout-main">
-                <div class="steps-main">
+                <div class="steps-main w-100">
                     <div class="step-block search-res step-active">
                         <div class="choosen-location">
                             <p id="header_travel"><span style="font-size: medium;">We can't find available trips for
@@ -392,20 +392,23 @@
                                     <tbody>
                                         <tr>
                                             <td style="width: 30px;">
-                                                <div class="seat available">
-                                                    <img alt="" src="assets/images/chair.svg">
+                                                <div>
+                                                    <img style="width: 30px; height: 30px;" alt=""
+                                                        src="assets/images/availble.png">
                                                 </div>
                                             </td>
                                             <td class="align-middle">Available</td>
                                             <td style="width: 30px;">
-                                                <div class="seat available senior">
-                                                    <img alt="" src="assets/images/chair.svg">
+                                                <div>
+                                                    <img style="width: 30px; height: 30px;" alt=""
+                                                        src="assets/images/senior.png">
                                                 </div>
                                             </td>
                                             <td class="align-middle">SERNIOR/PWD</td>
                                             <td style="width: 30px;">
-                                                <div class="seat unavailable booked">
-                                                    <img alt="" src="assets/images/chair.svg">
+                                                <div>
+                                                    <img style="width: 30px; height: 30px;" alt=""
+                                                        src="assets/images/reserved.png">
                                                 </div>
                                             </td>
                                             <td class="align-middle">Reserved</td>
@@ -484,9 +487,9 @@
                                             type="checkbox" class="form-check-input"></td>
                                     <td style="background-color: white;">
                                         <label for="terms_policy" class="fs-4">I agree to <a data-bs-toggle="modal"
-                                                data-bs-target="#modal-terms"
+                                                href="#modal-terms"
                                                 style="color: var(--secoundary); font-size: 1.6rem;"
-                                                href="javascript:;">Terms and
+                                                >Terms and
                                                 Conditions</a> & <a data-bs-toggle="modal"
                                                 data-bs-target="#modal-policy" href="javascript:;"
                                                 style="color: var(--secoundary); font-size: 1.6rem;">Privacy
@@ -665,9 +668,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1675843841740"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1675843841740"></script>
-    <script async rel="script" src="assets/js/main.js?v=1675843841740"></script>
+    <script async rel="script" src="assets/js/app.js?v=1675903463370"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1675903463370"></script>
+    <script async rel="script" src="assets/js/main.js?v=1675903463370"></script>
 
     <script>
         $("#chkReturn").change(function () {
