--- a/signup.html
+++ b/signup.html
@@ -189,7 +189,7 @@
     document.addEventListener("DOMContentLoaded", () => {
         let token = localStorage.getItem('TOKEN');
         if (token) {
-            window.location.href = document.URL.substring(0, document.URL.lastIndexOf('/')) + '/index.html';
+            window.location.href = './';
         }
     });
     submitForm = (e) => {
