--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1675903463370" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1675903463370" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1675903463370" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1675903463370" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1675905629207" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1675905629207" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1675905629207" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -17,8 +17,24 @@
     <title>IWantSeats</title>
     <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png">
     <style>
-        .modal.fade {
-            z-index: 10000000 !important;
+        ::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            background-color: #F5F5F5;
+            overflow-x: auto;
+        }
+
+        ::-webkit-scrollbar {
+            width: 12px;
+            background-color: #F5F5F5;
+            overflow-x: auto;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+            /* background-color: var(--primary); */
+            overflow-x: auto;
         }
     </style>
 </head>
@@ -488,8 +504,7 @@
                                     <td style="background-color: white;">
                                         <label for="terms_policy" class="fs-4">I agree to <a data-bs-toggle="modal"
                                                 href="#modal-terms"
-                                                style="color: var(--secoundary); font-size: 1.6rem;"
-                                                >Terms and
+                                                style="color: var(--secoundary); font-size: 1.6rem;">Terms and
                                                 Conditions</a> & <a data-bs-toggle="modal"
                                                 data-bs-target="#modal-policy" href="javascript:;"
                                                 style="color: var(--secoundary); font-size: 1.6rem;">Privacy
@@ -670,7 +685,7 @@
     <script rel="script" src="assets/js/moment.min.js"></script>
     <script async rel="script" src="assets/js/app.js?v=1675903463370"></script>
     <script async rel="script" src="assets/js/booking.js?v=1675903463370"></script>
-    <script async rel="script" src="assets/js/main.js?v=1675903463370"></script>
+    <script async rel="script" src="assets/js/main.js?v=1675905629207"></script>
 
     <script>
         $("#chkReturn").change(function () {
