--- a/booking.html
+++ b/booking.html
@@ -443,7 +443,7 @@
                         <div id="passenger-list">
                         </div>
                         <div style="overflow: auto; text-align: center">
-                            <button class="btn btn-primary fs-4" onclick="assignSeat()"
+                            <button class="btn btn-primary fs-4 assignseat" onclick="assignSeat()"
                                 style="padding: 5px 10px 5px 10px; width: 60%">
                                 Assign
                                 Seat
@@ -683,9 +683,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1675903463370"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1675903463370"></script>
-    <script async rel="script" src="assets/js/main.js?v=1675905629207"></script>
+    <script async rel="script" src="assets/js/app.js?v=1675950034947"></script>
+    <script async rel="script" src="assets/js/booking.js?v=167125950034947"></script>
+    <script async rel="script" src="assets/js/main.js?v=1675950034947"></script>
 
     <script>
         $("#chkReturn").change(function () {
