--- a/login.html
+++ b/login.html
@@ -1,228 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <!-- link css -->
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=10" rel="stylesheet" />
-    <title>IWantSeats</title>
-    <link
-      href="assets/images/logo.png"
-      rel="icon"
-      sizes="185x191"
-      type="image/png"
-    />
-    <!-- unicons -->
-    <link
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="container-max">
-        <div class="logo" onclick="window.open('./', '_self')">
-          <img alt="" src="assets/images/logo-black.png" />
-        </div>
-        <div class="links">
-          <a href="./" onclick="menu()">Home</a>
-          <a href="#" onclick="menu()">Reservations</a>
-          <a href="./#contact" onclick="menu()">Contact us</a>
-        </div>
-        <div class="menu" onclick="menu()">
-          <i class="uil uil-align-center-alt"></i>
-        </div>
-      </div>
-    </header>
-    <section class="form-main">
-      <div class="container">
-        <form id="login" onsubmit="SubmitForm(event)">
-          <center>
-            <div class="form-title">
-              <h3>Login</h3>
-            </div>
-          </center>
 
-          <div class="fild">
-            <i class="uil uil-envelope-alt"></i>
-            <input
-              id="email"
-              name="email"
-              placeholder="Email"
-              required
-              type="email"
-            />
-          </div>
-          <div class="fild">
-            <i class="uil uil-key-skeleton-alt"></i>
-            <input
-              id="password"
-              placeholder="Password"
-              required
-              type="password"
-            />
-            <i class="uil uil-dizzy-meh"></i>
-          </div>
-          <button class="btn signup fs-4" id="btn_login">Login</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <!-- link css -->
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+  <link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
+  <link href="assets/css/form.min.css?v=10" rel="stylesheet" />
+  <title>IWantSeats</title>
+  <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
+  <!-- unicons -->
+  <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
+</head>
 
-          <div class="ask">
-            <p>Not have an account? <a href="signup.html">Signup</a></p>
-            <p>
-              Need Help? Reset Password
-              <a href="#" onclick="openForgot()">here</a>
-            </p>
-          </div>
-        </form>
+<body>
+  <header>
+    <div class="container-max">
+      <div class="logo" onclick="window.open('./', '_self')">
+        <img alt="" src="assets/images/logo-black.png" />
       </div>
-    </section>
-    <footer>
-      <div class="container">
+      <div class="links">
+        <a href="./" onclick="menu()">Home</a>
+        <a href="#" onclick="menu()">Reservations</a>
+        <a href="./#contact" onclick="menu()">Contact us</a>
+      </div>
+      <div class="menu" onclick="menu()">
+        <i class="uil uil-align-center-alt"></i>
+      </div>
+    </div>
+  </header>
+  <section class="form-main">
+    <div class="container">
+      <form id="login" onsubmit="SubmitForm(event)">
         <center>
-          <p>&copy; 2022 - 2023 - iWantSeats 10</p>
-          <div class="privacy">
-            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
-            <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
+          <div class="form-title">
+            <h3>Login</h3>
           </div>
         </center>
-      </div>
-    </footer>
-  
-    <div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
-      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
-        <div class="modal-content">
-          <div class="modal-header p-3">
-            <h3 class="modal-title">Privacy Policy</h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div w3-include-html="policy.html"></div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center p-3">
-            <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
-          </div>
+
+        <div class="fild">
+          <i class="uil uil-envelope-alt"></i>
+          <input id="email" name="email" placeholder="Email" required type="email" />
+        </div>
+        <div class="fild">
+          <i class="uil uil-key-skeleton-alt"></i>
+          <input id="password" placeholder="Password" required type="password" />
+          <i class="uil uil-dizzy-meh"></i>
+        </div>
+        <button class="btn signup fs-4" id="btn_login">Login</button>
+
+        <div class="ask">
+          <p>Not have an account? <a href="signup.html">Signup</a></p>
+          <p>
+            Need Help? Reset Password
+            <a href="#" onclick="openForgot()">here</a>
+          </p>
+        </div>
+      </form>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <center>
+        <p>&copy; 2022 - 2023 - iWantSeats 10</p>
+        <div class="privacy">
+          <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
+          <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
+        </div>
+      </center>
+    </div>
+  </footer>
+
+  <div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+      <div class="modal-content">
+        <div class="modal-header p-3">
+          <h3 class="modal-title">Privacy Policy</h3>
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div w3-include-html="policy.html"></div>
+        </div>
+        <div class="modal-footer d-flex justify-content-center p-3">
+          <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-    <div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
-      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
-        <div class="modal-content">
-          <div class="modal-header p-4">
-            <h3 class="modal-title">Terms and Conditions</h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div w3-include-html="terms.html"></div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center p-3">
-            <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
-          </div>
+  </div>
+  <div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+      <div class="modal-content">
+        <div class="modal-header p-4">
+          <h3 class="modal-title">Terms and Conditions</h3>
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div w3-include-html="terms.html"></div>
+        </div>
+        <div class="modal-footer d-flex justify-content-center p-3">
+          <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-    <script rel="script" src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script rel="script" src="assets/js/axios.min.js"></script>
-    <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1675843841740"></script>
+  </div>
+  <script rel="script" src="assets/js/jquery.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script rel="script" src="assets/js/axios.min.js"></script>
+  <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
+  <script rel="script" src="assets/js/app.js?v=1675843841740"></script>
 
-    <script>
-      let axiosConfig = {
-        headers: {
-          "Content-Type": "application/json;charset=UTF-8",
-        },
-      };
+  <script>
+    let axiosConfig = {
+      headers: {
+        "Content-Type": "application/json;charset=UTF-8",
+      },
+    };
 
-      document.addEventListener("DOMContentLoaded", () => {
-        let token = localStorage.getItem("TOKEN");
-        if (token) {
-          window.location.href = './';
+    document.addEventListener("DOMContentLoaded", () => {
+      let token = localStorage.getItem("TOKEN");
+      if (token) {
+        window.location.href = './';
+      }
+    });
+
+    async function openForgot() {
+      Swal.fire({
+        title: "RESET PASSWORD",
+        input: "email",
+        inputLabel: "Enter your email address",
+        inputPlaceholder: "Enter email address",
+        allowOutsideClick: false,
+        showCancelButton: true,
+        confirmButtonText: "Submit",
+      }).then(async (result) => {
+        if (result.isConfirmed) {
+          Swal.fire({
+            title: "Please Wait..",
+            allowOutsideClick: false,
+            showCancelButton: false,
+            showConfirmButton: false,
+            allowEscapeKey: false,
+            willOpen: async function (e) {
+              Swal.showLoading();
+              let data = {
+                email: result.value,
+              };
+              let input = `https://iwsenterprise.com/squareone/iws10_resetpass`;
+              let res = await axios.post(input, data, axiosConfig);
+              if (res.data.RESULT === "SAVED") {
+                Swal.fire(
+                  "Success.. Please check your email to reset your password",
+                  "",
+                  "success"
+                );
+              } else {
+                Swal.fire("Failed.. Email not exist", "", "error");
+              }
+            },
+          });
         }
       });
+    }
 
-      async function openForgot() {
-        Swal.fire({
-          title: "RESET PASSWORD",
-          input: "email",
-          inputLabel: "Enter your email address",
-          inputPlaceholder: "Enter email address",
-          allowOutsideClick: false,
-          showCancelButton: true,
-          confirmButtonText: "Submit",
-        }).then(async (result) => {
-          if (result.isConfirmed) {
+    const SubmitForm = (e) => {
+      e.preventDefault();
+      let data = {
+        email: document.getElementById("email").value,
+        pwd: document.getElementById("password").value,
+      };
+
+      let url =
+        "https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/login/aaa/bbb";
+
+      console.log(JSON.stringify(data));
+      fetch(url, {
+        headers: {
+          "Content-Type": "application/json; charset=utf-8",
+        },
+        method: "post",
+        body: JSON.stringify(data),
+      })
+        .then((resp) => resp.json())
+        .then((row) => {
+          console.log(row);
+          if (row["RESULT"] === "INACTIVE") {
+            Swal.fire(
+              "Your Account is INACTIVE. Please check your registered email to activate."
+            );
+          } else if (row["RESULT"] === "OK") {
+            localStorage.setItem("loginInfo", JSON.stringify(data));
+            localStorage.setItem("userInfo", JSON.stringify(row));
+            localStorage.setItem("TOKEN", row["TOKEN"]);
+            if (localStorage.getItem("originName")) {
+              window.location.href =
+                document.URL.substring(0, document.URL.lastIndexOf("/")) +
+                "/booking.html";
+            } else {
+              window.location.href = './';
+            }
+          } else {
             Swal.fire({
-              title: "Please Wait..",
-              allowOutsideClick: false,
-              showCancelButton: false,
-              showConfirmButton: false,
-              allowEscapeKey: false,
-              willOpen: async function (e) {
-                Swal.showLoading();
-                let data = {
-                  email: result.value,
-                };
-                let input = `https://iwsenterprise.com/squareone/iws10_resetpass`;
-                let res = await axios.post(input, data, axiosConfig);
-                if (res.data.RESULT === "SAVED") {
-                  Swal.fire(
-                    "Success.. Please check your email to reset your password",
-                    "",
-                    "success"
-                  );
-                } else {
-                  Swal.fire("Failed.. Email not exist", "", "error");
-                }
-              },
-            });
+              title: "LOGIN FAILED", html: `<p style="font-size:10pt">If you are using an old password, you may reset your password  <a href='javascript:;' onclick="openForgot()">HERE</a>.</p>
+<p style="font-size:10pt">As we recently upgraded the website, a password reset is required to access your account.</p>
+<p style="font-size:10pt">If you have reset the password and still unable to login, please let us know at <a style="font-size:10pt" href="mailto:payments@iwantseats.com.ph">payments@iwantseats.com.ph</a></p>
+<p style="font-size:10pt">Thank you very much!</p>
+`});
+            document.getElementById("login").reset();
           }
         });
-      }
+    };
+  </script>
+</body>
 
-      const SubmitForm = (e) => {
-        e.preventDefault();
-        let data = {
-          email: document.getElementById("email").value,
-          pwd: document.getElementById("password").value,
-        };
-
-        let url =
-          "https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/login/aaa/bbb";
-
-        console.log(JSON.stringify(data));
-        fetch(url, {
-          headers: {
-            "Content-Type": "application/json; charset=utf-8",
-          },
-          method: "post",
-          body: JSON.stringify(data),
-        })
-          .then((resp) => resp.json())
-          .then((row) => {
-            console.log(row);
-            if (row["RESULT"] === "INACTIVE") {
-              Swal.fire(
-                "Your Account is INACTIVE. Please check your registered email to activate."
-              );
-            } else if (row["RESULT"] === "OK") {
-              localStorage.setItem("loginInfo", JSON.stringify(data));
-              localStorage.setItem("userInfo", JSON.stringify(row));
-              localStorage.setItem("TOKEN", row["TOKEN"]);
-              if (localStorage.getItem("originName")) {
-                window.location.href =
-                  document.URL.substring(0, document.URL.lastIndexOf("/")) +
-                  "/booking.html";
-              } else {
-                window.location.href ='./';
-              }
-            } else {
-              Swal.fire("INVALID EMAIL/PASSWORD");
-              document.getElementById("login").reset();
-            }
-          });
-      };
-    </script>
-  </body>
 </html>
