--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<header>
 		<div class="container-max">
 			<div class="logo" onclick="window.open('./', '_self')">
-				<img alt="" src="assets/images/logo-black.png" />
+				<img alt="logo icon" src="assets/images/logo-black.png" />
 			</div>
 			<div class="links">
 				<a href="#" onclick="menu()">Home</a>
