--- a/booking.html
+++ b/booking.html
@@ -10,7 +10,7 @@
     <link href="assets/css/form.min.css?v=1676017467719" rel="stylesheet" />
     <link href="assets/css/booking.css?v=1676017467719" rel="stylesheet" />
     <link href="assets/css/buss.css?v=1676017467719" rel="stylesheet" />
-	<link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
+    <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
     <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
@@ -37,11 +37,10 @@
             overflow-x: auto;
         }
 
-		input[type="date"]::-webkit-calendar-picker-indicator {
-			display: none;
-			-webkit-appearance: none;
-		}
-
+        input[type="date"]::-webkit-calendar-picker-indicator {
+            display: none;
+            -webkit-appearance: none;
+        }
     </style>
 </head>
 
@@ -563,8 +562,57 @@
                 </div>
                 <!-- booking popup modal end -->
 
+                <div id="modal-info" class="modal fade" role="dialog" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header pb-1 pt-1">
+                                <h4 class="modal-title">Edit Info</h4><button class="btn-close" type="button"
+                                    data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form onsubmit="EditInfo(event)">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6">
+                                            <div class="input-group mb-2 shadow">
+                                                <span class="input-group-text"><i class="far fa-user"></i></span>
+                                                <input class="form-control" type="text" id="first_name" name="first_name" placeholder="First name" required/>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-sm-6">
+                                            <div class="input-group mb-2 shadow">
+                                                <span class="input-group-text"><i class="far fa-user"></i></span>
+                                                <input class="form-control" type="text" name="last_name" placeholder="Last name" required type="text"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-sm-6">
+                                            <div class="input-group mb-2 shadow">
+                                                <span class="input-group-text"><i class="far fa-user"></i></span>
+                                                <input class="form-control" id="contact_number" name="contact_number" placeholder="Phone number"type="contact_number" />
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-sm-6">
+                                            <div class="input-group mb-2 shadow">
+                                                <span class="input-group-text"><i class="far fa-user"></i></span>
+                                                <input class="form-control" id="email" placeholder="Email" type="email" />
+                                            </div>
+                                        </div>
+                                        <div class="col text-center pt-3">
+                                            <div class="btn-group btn-group-sm gap-1" role="group">
+                                                <button class="btn btn-primary" type="submit"
+                                                    style="width: 115px;">Save</button>
+                                                <button class="btn btn-danger" type="button"
+                                                    style="width: 115px;" data-bs-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- edit booking unser info modal -->
-                <div class="edit-booked-user-info-modal">
+                <!-- <div class="edit-booked-user-info-modal">
                     <form class="edit-booked-user-info" id="pass-info" onsubmit="EditInfo(event)">
                         <h3>Edit info</h3>
                         <div class="row">
@@ -581,8 +629,7 @@
                         <div class="row">
                             <div class="fild">
                                 <i class="uil uil-phone"></i>
-                                <input id="contact_number" name="contact_number" placeholder="Phone number"
-                                    type="contact_number" />
+                                <input id="contact_number" name="contact_number" placeholder="Phone number"type="contact_number" />
                             </div>
                             <div class="fild">
                                 <i class="uil uil-envelope-alt"></i>
@@ -620,7 +667,7 @@
                                 edits</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <!-- edit booking user info modal end -->
             </div>
         </div>
