--- a/user-admin.html
+++ b/user-admin.html
@@ -7,9 +7,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
-    <link href="assets/css/admin.min.css?v=1675905629207" rel="stylesheet" />
-    <link href="assets/css/table.min.css?v=1675905629207" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/admin.min.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/table.min.css?v=1676463490861" rel="stylesheet" />
 
     <!-- unicons -->
     <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
@@ -74,8 +74,8 @@
                             <input id="password" required style="margin-top: 0!important;" type="password" />
                         </div>
                         <div class="btns">
-                            <button class="btn btn-primary submitbtn fs-4 p-3">Save changes</button>
-                            <div class="btn btn-danger fs-4 p-3" onclick="edit()">Cancel</div>
+                            <button class="btn btn-primary submitbtn fs-4 p-3" type="button">Save changes</button>
+                            <div class="btn btn-danger fs-4 p-3" type="button" onclick="edit()">Cancel</div>
                         </div>
                     </center>
                 </form>
@@ -147,49 +147,49 @@
         </div>
     </section>
     <footer>
-		<div class="container">
-			<center>
-				<p>&copy; 2022 - 2023 - iWantSeats 10</p>
-				<div class="privacy">
-					<a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
-					<a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
-				</div>
-			</center>
-		</div>
-	</footer>
+        <div class="container">
+            <center>
+                <p>&copy; 2022 - 2023 - iWantSeats 10</p>
+                <div class="privacy">
+                    <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms and Conditions</a>
+                    <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#modal-policy">Privacy policy</a>
+                </div>
+            </center>
+        </div>
+    </footer>
 
-	<div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
-		<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
-			<div class="modal-content">
-				<div class="modal-header p-3">
-					<h3 class="modal-title">Privacy Policy</h3>
-					<button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<div w3-include-html="policy.html"></div>
-				</div>
-				<div class="modal-footer d-flex justify-content-center p-3">
-					<button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
-		<div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
-			<div class="modal-content">
-				<div class="modal-header p-4">
-					<h3 class="modal-title">Terms and Conditions</h3>
-					<button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<div w3-include-html="terms.html"></div>
-				</div>
-				<div class="modal-footer d-flex justify-content-center p-3">
-					<button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div id="modal-policy" class="modal fade" role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header p-3">
+                    <h3 class="modal-title">Privacy Policy</h3>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div w3-include-html="policy.html"></div>
+                </div>
+                <div class="modal-footer d-flex justify-content-center p-3">
+                    <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="modal-terms" class="modal fade" role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header p-4">
+                    <h3 class="modal-title">Terms and Conditions</h3>
+                    <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div w3-include-html="terms.html"></div>
+                </div>
+                <div class="modal-footer d-flex justify-content-center p-3">
+                    <button class="btn btn-light fs-4" type="button" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         async function addElement(el, url) {
             let element = document.createElement(el);
@@ -210,19 +210,19 @@
     <script rel="script" src="assets/js/axios.min.js"></script>
     <script rel="script" src="assets/js/table.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script rel="script" src="assets/js/app.js?v=1676018900973"></script>
-    <script rel="script" src="assets/js/main.js?v=1676018900973"></script>
+    <script rel="script" src="assets/js/app.js?v=1676463490861"></script>
+    <script rel="script" src="assets/js/main.js?v=1676463490861"></script>
 
     <script>
+            let loginInfo = JSON.parse(localStorage.getItem('loginInfo'));
 
         $(document).ready(() => {
             let token = localStorage.getItem("TOKEN");
-            if(!token){
+            if (!token) {
                 window.location = "./login.html";
             }
 
             let userInfo = JSON.parse(localStorage.getItem('userInfo'));
-            let loginInfo = JSON.parse(localStorage.getItem('loginInfo'));
             let pholder = $('.details');
             pholder.html(`<h3 class="name">${userInfo.USERNAME}</h3>
                    <p><i class="uil uil-envelope"></i>${loginInfo.email}</p>
@@ -230,18 +230,8 @@
             getHistory();
         })
 
-        async function fetchUpdateProfile() {
+        async function fetchUpdateProfile(data) {
             let input = `https://iwsenterprise.com/iwsticketing_v3/iwsapiengine/updateonlineuser`;
-            let data = {
-                token: localStorage.getItem('TOKEN'),
-                password: $('#password').val(),
-                firstname: $('#firstname').val(),
-                middlename: "",
-                lastname: $('#lastname').val(),
-                birthDate: $('#birthday').val(),
-                contactNo: $('#contact').val(),
-                gender: "M"
-            }
             console.log(JSON.stringify(data))
             let response = await fetch(input, {
                 headers: {
@@ -255,8 +245,35 @@
 
 
         $('.submitbtn').click(() => {
-            fetchUpdateProfile()
-                .then(() => {
+            let data = {
+                token: localStorage.getItem('TOKEN'),
+                password: $('#password').val(),
+                firstname: $('#firstname').val(),
+                middlename: "",
+                lastname: $('#lastname').val(),
+                birthDate: $('#birthday').val(),
+                contactNo: $('#contact').val(),
+                gender: "M"
+            }
+            console.log('userdata', data);
+            fetchUpdateProfile(data)
+                .then((res) => {
+                    if (res.RESULT === 'SAVED') {
+                        let info = {
+                            "RESULT": "OK",
+                            "TOKEN": localStorage.getItem('TOKEN'),
+                            "USERNAME": `${$('#lastname').val()}, ${$('#firstname').val()}`,
+                            "GENDER": "M",
+                            "CONTACT_NO": $('#contact').val(),
+                            "BIRTHDATE": $('#birthday').val()
+                        }
+                        let login = {
+                            email: loginInfo.email,
+                            pwd: $('#password').val(),
+                        };
+                        localStorage.setItem("loginInfo", JSON.stringify(login));
+                        localStorage.setItem("userInfo", JSON.stringify(info));
+                    }
                     editProfile.classList.remove("active");
                 })
                 .catch(error => {
