--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1676017467719" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1676017467719" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1676017467719" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1676017467719" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1676463490861" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -562,57 +562,10 @@
                 </div>
                 <!-- booking popup modal end -->
 
-                <div id="modal-info" class="modal fade" role="dialog" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header pb-1 pt-1">
-                                <h4 class="modal-title">Edit Info</h4><button class="btn-close" type="button"
-                                    data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form onsubmit="EditInfo(event)">
-                                    <div class="row">
-                                        <div class="col-12 col-sm-6">
-                                            <div class="input-group mb-2 shadow">
-                                                <span class="input-group-text"><i class="far fa-user"></i></span>
-                                                <input class="form-control" type="text" id="first_name" name="first_name" placeholder="First name" required/>
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-sm-6">
-                                            <div class="input-group mb-2 shadow">
-                                                <span class="input-group-text"><i class="far fa-user"></i></span>
-                                                <input class="form-control" type="text" name="last_name" placeholder="Last name" required type="text"/>
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-sm-6">
-                                            <div class="input-group mb-2 shadow">
-                                                <span class="input-group-text"><i class="far fa-user"></i></span>
-                                                <input class="form-control" id="contact_number" name="contact_number" placeholder="Phone number"type="contact_number" />
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-sm-6">
-                                            <div class="input-group mb-2 shadow">
-                                                <span class="input-group-text"><i class="far fa-user"></i></span>
-                                                <input class="form-control" id="email" placeholder="Email" type="email" />
-                                            </div>
-                                        </div>
-                                        <div class="col text-center pt-3">
-                                            <div class="btn-group btn-group-sm gap-1" role="group">
-                                                <button class="btn btn-primary" type="submit"
-                                                    style="width: 115px;">Save</button>
-                                                <button class="btn btn-danger" type="button"
-                                                    style="width: 115px;" data-bs-dismiss="modal">Cancel</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- edit booking unser info modal -->
-                <!-- <div class="edit-booked-user-info-modal">
+
+                <!-- edit booking unser info modal --> -->
+                <div class="edit-booked-user-info-modal">
                     <form class="edit-booked-user-info" id="pass-info" onsubmit="EditInfo(event)">
                         <h3>Edit info</h3>
                         <div class="row">
@@ -629,7 +582,8 @@
                         <div class="row">
                             <div class="fild">
                                 <i class="uil uil-phone"></i>
-                                <input id="contact_number" name="contact_number" placeholder="Phone number"type="contact_number" />
+                                <input id="contact_number" name="contact_number" placeholder="Phone number"
+                                    type="contact_number" required />
                             </div>
                             <div class="fild">
                                 <i class="uil uil-envelope-alt"></i>
@@ -642,32 +596,32 @@
                             <input id="birthday" name="birthday"
                                 onchange="this.className=(this.value!=''?'has-value':'')" type="date" />
                         </div>
-                        <!--                    <div class="gender-main">-->
-                        <!--                        <label class="bt" for="gender">Gender</label>-->
-                        <!--                        <div class="gender" id="gender">-->
-                        <!--                            <div class="gender-type">-->
-                        <!--                                <input checked id="male" name="gender" type="radio" value="m"/>-->
-                        <!--                                <label for="male">-->
-                        <!--                                    <i class="uil uil-mars"></i>-->
-                        <!--                                    <p>male</p>-->
-                        <!--                                </label>-->
-                        <!--                            </div>-->
-                        <!--                            <div class="gender-type">-->
-                        <!--                                <input id="female" id="female" name="gender" type="radio" value="f"/>-->
-                        <!--                                <label for="female">-->
-                        <!--                                    <i class="uil uil-venus"></i>-->
-                        <!--                                    <p>Female</p>-->
-                        <!--                                </label>-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
-                        <!--                    </div>-->
+                        <div class="gender-main">
+                            <label class="bt" for="gender">Gender</label>
+                            <div class="gender d-flex justify-content-center" id="gender">
+                                <div class="gender-type">
+                                    <input checked id="male" name="gender" type="radio" value="M" />
+                                    <label for="male">
+                                        <i class="uil uil-mars"></i>
+                                        <p>male</p>
+                                    </label>
+                                </div>
+                                <div class="gender-type d-flex align-middle">
+                                    <input id="female" id="female" name="gender" type="radio" value="F" />
+                                    <label for="female">
+                                        <i class="uil uil-venus"></i>
+                                        <p>Female</p>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                         <div class="btns">
                             <button class="btn btn-primary fs-4 " type="submit">Save edits</button>
                             <button class="btn btn-primary fs-4" onclick="closeModalInfo()" type="button">Cancel
                                 edits</button>
                         </div>
                     </form>
-                </div> -->
+                </div>
                 <!-- edit booking user info modal end -->
             </div>
         </div>
@@ -736,9 +690,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1676018900973"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1676018900973"></script>
-    <script async rel="script" src="assets/js/main.js?v=1676018900973"></script>
+    <script async rel="script" src="assets/js/app.js?v=1676463490861"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1676463490861"></script>
+    <script async rel="script" src="assets/js/main.js?v=1676463490861"></script>
 
     <script>
         $("#chkReturn").change(function () {
@@ -756,11 +710,6 @@
                 continueBtn.classList.remove("active");
             };
         });
-
-
-
-
-
     </script>
 </body>
 
