--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<!-- link css -->
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-	<link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
-	<link href="assets/css/form.min.css?v=10" rel="stylesheet" />
+	<link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
+	<link href="assets/css/form.min.css" rel="stylesheet" />
 	<title>IWantSeats</title>
 	<link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
-	<link href="assets/swal/sweetalert2.min.css?v=10" rel="stylesheet" />
+	<link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
 	<!-- unicons -->
 	<link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet" />
@@ -597,8 +597,8 @@
 	<script rel="script" src="assets/js/lodash.min.js"></script>
 	<script rel="script" src="assets/swal/sweetalert2.min.js"></script>
 	<script rel="script" src="assets/js/loadingoverlay.min.js"></script>
-	<script async rel="script" src="assets/js/app.js?v=1676018900973"></script>
-	<script async rel="script" src="assets/js/main.js?v=1676018900973"></script>
+	<script async rel="script" src="assets/js/app.js?v=1676463490861"></script>
+	<script async rel="script" src="assets/js/main.js?v=1676463490861"></script>
 	<script>
 		$("#chkReturn").change(function () {
 			if (this.checked) {
