--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <!-- link css -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-  <link href="assets/css/style.css?v=1675905629207" rel="stylesheet" />
-  <link href="assets/css/form.min.css?v=10" rel="stylesheet" />
+  <link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
+  <link href="assets/css/form.min.css" rel="stylesheet" />
   <title>IWantSeats</title>
   <link href="assets/images/logo.png" rel="icon" sizes="185x191" type="image/png" />
   <!-- unicons -->
@@ -107,9 +107,9 @@
   </div>
   <script rel="script" src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script rel="script" src="assets/js/axios.min.js"></script>
+  <script rel="script" src="assets/js/axios.min.js"></script>1676463490861
   <script rel="script" src="assets/swal/sweetalert2.all.js"></script>
-  <script rel="script" src="assets/js/app.js?v=1675843841740"></script>
+  <script rel="script" src="assets/js/app.js?v=1676463490861"></script>
 
   <script>
     let axiosConfig = {
@@ -163,6 +163,7 @@
         }
       });
     }
+
 
     const SubmitForm = (e) => {
       e.preventDefault();
