--- a/booking.html
+++ b/booking.html
@@ -6,10 +6,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- link css -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-    <link href="assets/css/style.css?v=1676463490861" rel="stylesheet" />
-    <link href="assets/css/form.min.css?v=1676463490861" rel="stylesheet" />
-    <link href="assets/css/booking.css?v=1676463490861" rel="stylesheet" />
-    <link href="assets/css/buss.css?v=1676463490861" rel="stylesheet" />
+    <link href="assets/css/style.css?v=1676509628604" rel="stylesheet" />
+    <link href="assets/css/form.min.css?v=1676509628604" rel="stylesheet" />
+    <link href="assets/css/booking.css?v=1676509628604" rel="stylesheet" />
+    <link href="assets/css/buss.css?v=1676509628604" rel="stylesheet" />
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet" />
 
     <!-- unicons -->
@@ -146,8 +146,7 @@
                 <div class="steps-main w-100">
                     <div class="step-block search-res step-active">
                         <div class="choosen-location">
-                            <p id="header_travel"><span style="font-size: medium;">We can't find available trips for
-                                    this date. Please try another search</span></p>
+                            <p id="header_travel"></p>
                             <!-- <div class="time">-->
                             <!--                  <input -->
                             <!--                    type="datetime-local"-->
@@ -690,9 +689,9 @@
     <script rel="script" src="assets/js/lodash.min.js"></script>
     <script rel="script" src="assets/swal/sweetalert2.min.js"></script>
     <script rel="script" src="assets/js/moment.min.js"></script>
-    <script async rel="script" src="assets/js/app.js?v=1676463490861"></script>
-    <script async rel="script" src="assets/js/booking.js?v=1676463490861"></script>
-    <script async rel="script" src="assets/js/main.js?v=1676463490861"></script>
+    <script async rel="script" src="assets/js/app.js?v=1676509628604"></script>
+    <script async rel="script" src="assets/js/booking.js?v=1676509628604"></script>
+    <script async rel="script" src="assets/js/main.js?v=1676509628604"></script>
 
     <script>
         $("#chkReturn").change(function () {
